[package]
name = "proc-cpuinfo"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "Read /proc/cpuinfo on Linux systems"
license = "MIT"
homepage = "https://github.com/conqp/proc_cpuinfo/"
repository = "https://github.com/conqp/proc_cpuinfo/"
readme = "README.md"
documentation = "https://docs.rs/proc-cpuinfo"
keywords = [ "proc", "cpuinfo"]
version = "0.1.6"
edition = "2021"
exclude = [
    ".gitignore",
]
